test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test "--coverage"

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/cis-scheduler-team-2/cis-scheduler-team-2/node_modules/react-bootstrap/esm/DropdownItem.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import classNames from 'classnames';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | import React from "react";
      2 | import { Dropdown } from "react-bootstrap";
    > 3 | import DropdownItem from "react-bootstrap/esm/DropdownItem";
        | ^
      4 | import DropdownMenu from "react-bootstrap/esm/DropdownMenu";
      5 | import DropdownToggle from "react-bootstrap/esm/DropdownToggle";
      6 | import { Course } from "../interfaces/course";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/MoveFromPool.tsx:3:1)

---------------------------|---------|----------|---------|---------|-------------------
File                       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
---------------------------|---------|----------|---------|---------|-------------------
All files                  |       0 |        0 |       0 |       0 |                   
 src                       |       0 |        0 |       0 |       0 |                   
  App.tsx                  |       0 |        0 |       0 |       0 | 20-319            
 src/components            |       0 |        0 |       0 |       0 |                   
  AddCourseButton.tsx      |       0 |      100 |       0 |       0 | 19-23             
  AddCourseModal.tsx       |       0 |      100 |       0 |       0 | 21                
  AddCourseToSemester.tsx  |       0 |        0 |       0 |       0 | 27-261            
  AddNewPlan.tsx           |       0 |        0 |       0 |       0 | 20-160            
  ClearAllSemesters.tsx    |       0 |        0 |       0 |       0 | 22-53             
  ClearSemester.tsx        |       0 |      100 |       0 |       0 | 19-23             
  CourseList.tsx           |       0 |        0 |       0 |       0 | 16-47             
  CourseTable.tsx          |       0 |        0 |       0 |       0 | 37-63             
  CourseView.tsx           |       0 |        0 |       0 |       0 | 17-23             
  DeleteCourseButton.tsx   |       0 |      100 |       0 |       0 | 18-23             
  DeletePlan.tsx           |       0 |      100 |       0 |       0 | 12-16             
  DeleteSemesterButton.tsx |       0 |      100 |       0 |       0 | 12-14             
  EditCourseButton.tsx     |       0 |      100 |       0 |       0 | 21-25             
  EditCourseInSemester.tsx |       0 |        0 |       0 |       0 | 27-238            
  EditCourseModal.tsx      |       0 |      100 |       0 |       0 | 23                
  InsertSemesterModal.tsx  |       0 |        0 |       0 |       0 | 16-61             
  ListAllPlans.tsx         |       0 |        0 |       0 |       0 | 21-39             
  MoveCourseButton.tsx     |       0 |        0 |       0 |       0 | 30-56             
  MoveFromPool.tsx         |       0 |      100 |       0 |       0 | 19-28             
  SemesterTable.tsx        |       0 |      100 |       0 |       0 | 45-51             
  WelcomeMessage.tsx       |       0 |      100 |       0 |       0 | 14                
 src/interfaces            |       0 |        0 |       0 |       0 |                   
  course.ts                |       0 |        0 |       0 |       0 |                   
  placeholderPlan.ts       |       0 |        0 |       0 |       0 | 5-84              
  plan.ts                  |       0 |        0 |       0 |       0 |                   
  semester.ts              |       0 |        0 |       0 |       0 |                   
---------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.583 s
Ran all test suites.
